--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,20 +104,8 @@ jobs:
         run: npx lingui extract
       - name: Checking for new messages
         run: git status --porcelain | grep . && exit 1 || exit 0
-      - uses: actions/github-script@0.4.0
-        # if: failure()
-        id: start-check
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const result = await github.checks.listForRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.sha
-            })
-            return result.data.check_runs.find(run => run.name === 'L').id
-      - name: Commiting messages
-        # if: failure()
+      - name: Add buttons
+        if: failure()
         uses: actions/github-script@0.4.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
