--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,7 +123,15 @@ jobs:
               actions: [{
                 label: 'FIX',
                 description: 'desc',
-                identifier: 'commit'
+                identifier: 'requested_action'
+              },{
+                label: 'FIX2',
+                description: 'desc',
+                identifier: 'check-run-commit'
+              },{
+                label: 'FIX3',
+                description: 'desc',
+                identifier: 'requested_action[check-run-commit]'
               }]
             })
   # build:
