--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,9 +106,11 @@ jobs:
         run: git status --porcelain | grep . && exit 1 || exit 0
       - name: Add buttons
         if: failure()
+        env:
+          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
         uses: actions/github-script@0.4.0
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.SECRET_TOKEN}}
           script: |
             await github.checks.create({
               owner: context.repo.owner,
