--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,8 @@ jobs:
         run: yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_REGISTRY_TOKEN }}
+      - name: Config merge
+        run: git config merge.pofile.driver "$(npm bin)/git-po-merge %A %O %B" && git config merge.pofile.name "custom merge driver for gettext po files"
       - name: Extracting messages
         run: yarn extract
       - name: Commiting locales
