--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@master
         with:
-          fetch-depth: 1
+          ref: ${{ github.ref }}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
