--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,7 +21,7 @@ jobs:
         if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - name: Merge with master
-        run: git fetch && git checkout igor-7 && git merge master
+        run: git fetch && git checkout origin/igor-7 && git merge origin/master
       - name: Remove messages
         run: echo -n "" > src/locales/en/messages.po
       - name: Extracting messages
