--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@master
         with:
-          fetch-depth: 1
+          ref: ${{ github.head_ref }}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
@@ -21,7 +21,7 @@ jobs:
         if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - name: Merge with master
-        run: git rev-parse --abbrev-ref HEAD && git merge origin/master
+        run: git fetch && git merge origin/master
       - name: Remove messages
         run: echo -n "" > src/locales/en/messages.po
       - name: Extracting messages
