--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -8,10 +8,9 @@ jobs:
     if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/merge')
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-        with:
-          ref: ${{ github.head_ref }}
+      - uses: actions/checkout@master
+      - name: reattach HEAD to Head Ref
+        run: git checkout "$(echo ${{ github.head_ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
       - name: Setup node
         uses: actions/setup-node@v1
         with:
