--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -11,6 +11,10 @@ jobs:
       - uses: actions/checkout@master
       - name: reattach HEAD to Head Ref
         run: git checkout "$(echo ${{ github.head_ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+        if: github.head_ref != ''
+      - name: reattach HEAD to Ref
+        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+        if: github.head_ref == ''
       - name: Setup node
         uses: actions/setup-node@v1
         with:
