--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -9,12 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: reattach HEAD to Head Ref
-        run: git checkout "$(echo ${{ github.base_ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
-        if: github.head_ref != ''
-      - name: reattach HEAD to Ref
-        run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
-        if: github.head_ref == ''
+      - name: Echo
+        run: echo ${{ github }}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
