--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -20,7 +20,11 @@ jobs:
         if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - name: Merge with master
-        run: git fetch && git merge origin/igor-7 --allow-unrelated-histories
+        run: |
+          git config --global user.email "igor.techweb@gmail.com"
+          git config --global user.name "Igor Dolzhenkov"
+          git fetch && git merge origin/igor-7 --allow-unrelated-histories
+
       - name: Remove messages
         run: echo -n "" > src/locales/en/messages.po
       - name: Extracting messages
