--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -26,6 +26,7 @@ jobs:
           git fetch && git merge origin/igor-7 --allow-unrelated-histories
 
       - name: Remove messages
+        if: failure()
         run: echo -n "" > src/locales/en/messages.po
       - name: Extracting messages
         run: npx lingui extract
