--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Echo
-        run: echo "${GITHUB_REF:11}"
+        run: echo ${{GITHUB_REF:11}}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
