--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -32,6 +32,7 @@ jobs:
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
           git fetch && git merge origin/master --allow-unrelated-histories
+          echo GITHUB_REF ${GITHUB_REF} ${{GITHUB_REF}}
 
       - name: Remove messages
         if: failure()
@@ -48,7 +49,7 @@ jobs:
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat6"
-          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${{ steps.comment-branch.outputs.ref }}"
+          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
 
   always_job:
     name: Always run job
