--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -47,8 +47,8 @@ jobs:
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
           git add .
-          git commit -m "Locales updat6"
-          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
+          git commit -m "Locales updat7"
+          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref:11 }}
 
   always_job:
     name: Always run job
