--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config --global user.email "igor.techweb@gmail.com"
           git config --global user.name "Igor Dolzhenkov"
-          git fetch && git merge origin/master --allow-unrelated-histories
+          git merge origin/master --allow-unrelated-histories
 
       - name: Remove messages
         if: failure()
@@ -44,15 +44,6 @@ jobs:
           SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
         if: failure()
         run: |
-          git config --global user.email "igor.techweb@gmail.com"
-          git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat7"
           git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref }}
-
-  always_job:
-    name: Always run job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Always run
-        run: echo "This job is used to prevent the workflow to fail when all other jobs are skipped."
