--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -29,8 +29,8 @@ jobs:
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - name: Merge with master
         run: |
-          git config --global user.email "igor.techweb@gmail.com"
-          git config --global user.name "Igor Dolzhenkov"
+          git config --global user.email "dev@pleo.io"
+          git config --global user.name "Dev bot"
           git fetch && git merge origin/master --allow-unrelated-histories
 
       - name: Remove messages
@@ -41,9 +41,13 @@ jobs:
         run: npx lingui extract
       - name: Commiting messages
         env:
-          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
+          PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
         if: failure()
         run: |
           git add .
-          git commit -m "Locales updat7"
-          git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref }}
+          git commit -m "Merge with master: message extraction"
+      - name: Push messages
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ steps.comment-branch.outputs.ref }}
