--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -1,8 +1,5 @@
-on:
-  pull_request:
-    types: [opened]
-  issue_comment:
-    types: [created]
+on: push
+name: TestPush
 jobs:
   deploy:
     runs-on: ubuntu-latest
