--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -43,4 +43,10 @@ jobs:
         run: |
           git add .
           git commit -m "Merge with master: message extraction"
-          git push https://igorDolzh:$PUSH_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref }}
+        #   git push https://igorDolzh:$PUSH_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref }}
+      - name: Push changes
+        if: failure()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ steps.comment-branch.outputs.ref }}
