--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -48,5 +48,5 @@ jobs:
         if: failure()
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PUSH_TOKEN }}
           branch: ${{ steps.comment-branch.outputs.ref }}
