--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -29,15 +29,13 @@ jobs:
           git config --global user.email "dev@pleo.io"
           git config --global user.name "Dev bot"
           git fetch && git merge origin/master --allow-unrelated-histories
+          git status --porcelain | grep . && exit 0 || exit 1
 
       - name: Remove messages
-        if: failure()
         run: echo -n "" > src/locales/en/messages.po
       - name: Extracting messages
-        if: failure()
         run: npx lingui extract
       - name: Commiting messages
-        if: failure()
         env:
           SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
         run: |
