--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
         run: |
-          git add .
+          git add src/locales/en/messages.po
           git commit -m "Merge with master: message extraction"
           git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:${{ steps.comment-branch.outputs.ref }}
     #   - name: Push changes
