--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,18 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: xt0rted/pull-request-comment-branch@v1
-          id: comment-branch
-          with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/checkout@v1
+        id: comment-branch
+        with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+        if: success()
+        with:
+          ref: ${{ steps.comment-branch.outputs.ref }}
       - uses: igorDolzh/lokalise-file-push@v0.0.7
-          with:
-          # Api token for the Lokalise account
-          # with read/write access to the project
-          api-token: ${{ secrets.LOCALIZE_TOKEN }}
+        with:
+        # Api token for the Lokalise account
+        # with read/write access to the project
+        api-token: ${{ secrets.LOCALIZE_TOKEN }}
 
-          # ID of the project to sync
-          project-id: 555095675eb16c7253d6f3.87410578
+        # ID of the project to sync
+        project-id: 555095675eb16c7253d6f3.87410578
 
-          # The relative file path where language files will be found
-          file-path: src/locales/en/messages.po
+        # The relative file path where language files will be found
+        file-path: src/locales/en/messages.po
