--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,3 +28,6 @@ jobs:
 
           # The relative file path where language files will be found
           file-path: src/locales/en/messages.po
+
+          tags:
+            - pre-release
