--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,4 +29,4 @@ jobs:
           # The relative file path where language files will be found
           file-path: src/locales/en/messages.po
 
-          tags: [pre-release]
+          tag: pre-release
