--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ name: Push translations
 jobs:
   merge:
     name: Push translations
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/push-translation')
+    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/push-messages')
     runs-on: ubuntu-latest
     steps:
       - uses: xt0rted/pull-request-comment-branch@v1
@@ -24,7 +24,7 @@ jobs:
           api-token: ${{ secrets.LOCALIZE_TOKEN }}
 
           # ID of the project to sync
-          project-id: 555095675eb16c7253d6f3.87410578
+          project-id: ${{ secrets.LOCALIZE_PROJECT }}
 
           # The relative file path where language files will be found
           file-path: src/locales/en/messages.po
