--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       # This will echo "Your PR is 7", or be skipped if there is no current PR.
       - run: echo "Your PR is ${PR}"
-        if: success() && steps.findPr.outputs.number
+        if: steps.findPr.outputs.number
         env:
           PR: ${{ steps.findPr.outputs.pr }}
       - name: Lokalise File Push
