--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,8 @@ jobs:
         id: comment-branch
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Debug Action
+        uses: hmarr/debug-action@v1.0.0
       - uses: actions/checkout@v2
         if: success()
         with:
