--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -1,4 +1,4 @@
-on: pull-request
+on: pull_request 
 name: Push translations
 jobs:
     merge:
@@ -18,7 +18,7 @@ jobs:
             label: start-localisation
         - name: Does 'pull_request' has ${{ steps.checkLabel.outputs.checkedLabel }} label? 
           run: echo "${{ steps.checkLabel.outputs.hasLabel }}" 
-        Find the PR associated with this push, if there is one.
+        # Find the PR associated with this push, if there is one.
         - uses: jwalton/gh-find-current-pr@v1
           id: findPr
           with:
