--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -2,7 +2,7 @@ on:
     pull_request:
       branches:
         - master
-name: Push translations
+name: Push transl1231ations
 jobs:
     merge:
       name: Push translations
