--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -18,7 +18,7 @@ jobs:
           uses: shioyang/check-pr-labels-on-push-action@v1.0.3
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
-            labels: '["start-localise"]'
+            labels: '["start-localisation"]'
         - name: See result
           run: echo "${{ steps.check_pr_labels.outputs.result }}"
         # Find the PR associated with this push, if there is one.
