--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -11,6 +11,16 @@ jobs:
           if: success()
           with:
             ref: ${{ steps.comment-branch.outputs.ref }}
+        # Find the PR associated with this push, if there is one.
+        - uses: jwalton/gh-find-current-pr@v1
+          id: findPr
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
+        # This will echo "Your PR is 7", or be skipped if there is no current PR.
+        - run: echo "Your PR is ${PR} ${{steps.findPr.outputs.title }} ${{steps.findPr.outputs.body }}"
+          if: success() && steps.findPr.outputs.number
+          env:
+           PR: ${{ steps.findPr.outputs.pr }}
         - run: echo "Your PR is ${{ github.event.issue.title }} ${{ github.event.label.name }} ${{ github.event.issue.body }}"
 
         - name: Check PR labels action step
