--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -31,11 +31,11 @@ jobs:
             labels: '["start-localisation"]'
         - name: See result
           run: echo "${{ steps.check_pr_labels.outputs.result }}"
-        # Find the PR associated with this push, if there is one.
-        - uses: jwalton/gh-find-current-pr@v1
-          id: findPr
-          with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
+        # # Find the PR associated with this push, if there is one.
+        # - uses: jwalton/gh-find-current-pr@v1
+        #   id: findPr
+        #   with:
+        #     github-token: ${{ secrets.GITHUB_TOKEN }}
         # This will echo "Your PR is 7", or be skipped if there is no current PR.
         - run: echo "Your PR is ${{ github.event.issue.title }} ${{ github.event.issue.body }}"
         - name: Get short SHA
