--- a/.github/workflows/labelset.yml
+++ b/.github/workflows/labelset.yml
@@ -81,7 +81,7 @@ jobs:
             task-title: ${{ github.event.pull_request.title }}
   
             # Task description
-            task-description: ${{ github.event.pull_request.body }}
+            task-description: '${{ github.event.pull_request.body }} <repo>${{ github.event.repository.name }}</repo> <ref>${GITHUB_REF:11}</ref>'
   
             # Task options for https://app.lokalise.com/api2docs/curl/#transition-create-a-task-post
             task-options: '{"auto_close_task": true, "auto_close_languages": true}'
