--- a/.github/workflows/labelset.yml
+++ b/.github/workflows/labelset.yml
@@ -33,6 +33,10 @@ jobs:
           if: github.event.label.name == 'start-localisation'
           id: comment
           run: echo "::set-output name=tagname::$(echo ${{github.event.pull_request.head.sha}} | cut -c16-)"
+        - name: Get branch name
+          if: steps.check_pr_labels.outputs.result == 'true'
+          id: branch
+          run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
         - name: Lokalise File Push
           if: github.event.label.name == 'start-localisation'
           uses: pleo-io/actions/lokalise-file-push@v6.0
@@ -81,7 +85,7 @@ jobs:
             task-title: ${{ github.event.pull_request.title }}
   
             # Task description
-            task-description: '${{ github.event.pull_request.body }} <repo>${{ github.event.repository.name }}</repo> <ref>${GITHUB_REF:11}</ref>'
+            task-description: '${{ steps.findPr.outputs.body }} <repo>${{ github.event.repository.name }}</repo> <ref>${{ steps.branch.outputs.name }}</ref>'
   
             # Task options for https://app.lokalise.com/api2docs/curl/#transition-create-a-task-post
             task-options: '{"auto_close_task": true, "auto_close_languages": true}'
