--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -42,15 +42,15 @@ jobs:
         # This will echo "Your PR is 7", or be skipped if there is no current PR.
         # - run: echo "Your PR is ${{ github.event.issue.title }} ${{ github.event.issue.body }}"
         - name: Get short SHA
-          if: steps.check_pr_labels.outputs.result == 'true'
+          if: steps.check_pr_labels.outputs.result == 'true' && (github.event.label.name == 'start-localisation' || !github.event.label)
           id: comment
           run: echo "::set-output name=tagname::$(echo ${{github.event.after}} | cut -c16-)"
         - name: Get branch name
-          if: steps.check_pr_labels.outputs.result == 'true'
+          if: success()
           id: branch
           run: echo "::set-output name=name::$(echo ${{github.event.ref}} | cut -c12-)"
         - name: Lokalise File Push
-          if: steps.check_pr_labels.outputs.result == 'true'
+          if: success()
           uses: pleo-io/actions/lokalise-file-push@v6.0
           with:
             # Api token for the Lokalise account
@@ -67,7 +67,7 @@ jobs:
   
             locales: '["en"]'
         - name: Lokalise create task
-          if: steps.check_pr_labels.outputs.result == 'true'
+          if: success()
           uses: pleo-io/actions/lokalise-create-task@v6.0
           with:
             # Api token for the Lokalise account
